style.css
:root {
	--d: 3500ms;
	--angle: 90deg;
	--gradX: 100%;
	--gradY: 50%;
	--c1: rgba(168, 239, 255, 1);
	--c2: rgba(168, 239, 255, 0.1);
}
@property --angle {
    syntax: '<angle>';
    initial-value: 90deg;
    inherits: true;
  }
  
  @property --gradX {
    syntax: '<percentage>';
    initial-value: 50%;
    inherits: true;
  }
  
  @property --gradY {
    syntax: '<percentage>';
    initial-value: 0%;
    inherits: true;
  }

body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Trebuchet MS';
}
a {
    text-decoration: none;
    color: white;
    font-family: 'Trebuchet MS';
}
/* Classlists Starts */
.close {
    visibility: hidden;
}
.hide {
  display: none !important;
}
.fade {
    animation:fade 2s 1;
    animation-fill-mode: forwards;
}
.box {
        margin: max(1rem, 2vw);
        padding: 0;
        border: 2px solid;
        border-radius: 8px;
        /* width: 100%; */
        border-image: conic-gradient(from var(--angle), var(--c2), var(--c1) 0.1turn, var(--c1) 0.15turn, var(--c2) 0.25turn) 20;
        animation: borderRotate var(--d) linear infinite forwards;
}
.box:nth-child(2) {
	border-image: radial-gradient(ellipse at var(--gradX) var(--gradY), var(--c1), var(--c1) 10%, var(--c2) 40%) 30;
	animation: borderRadial var(--d) linear infinite forwards;
}

@keyframes borderRotate {
	100% {
		--angle: 420deg;
	}
}

@keyframes borderRadial {
	20% {
		--gradX: 100%;
		--gradY: 50%;
	}
	40% {
		--gradX: 100%;
		--gradY: 100%;
	}
	60% {
		--gradX: 50%;
		--gradY: 100%;
	}
	80% {
		--gradX: 0%;
		--gradY: 50%;
	}
	100% {
		--gradX: 50%;
		--gradY: 0%;
	}
}
/* Classlists Ends */
.main{
    height: 100vh;
    width: 100vw;
    display: grid;
    /* grid-template-columns:0.2fr 1.8fr 1fr; */
    grid-template-columns:1fr 2fr 1fr;
    place-content: center;
    background-image:radial-gradient(rgb(51, 51, 145) 0%, rgb(27, 17, 81) 30%,rgb(0, 0, 42) 80%);
    background-blend-mode: overlay;
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: contain;
    overflow: hidden;
    justify-items: center;
}
.tool {
    color: white;
    border: 1px solid white;
    padding-inline: 5vh;
    padding-block: 2vh;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    justify-content: start;
    align-items: center;
    backdrop-filter: blur(10px);
    place-self: center;
    z-index: 999;
    box-shadow: 0px 0px 30px 10px rgba(255, 255, 255, 0.1);
    grid-area: 1/2;
}

.loader {
    margin-top: -10px;
    /* position: absolute;
    bottom: 52%;
    right: 8%; */
    height: 25px;
    width: 25px;
    border: 2px dashed white;
    border-radius: 50%;
    animation: load 2s infinite;
}
.address-container {
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}
.address {
    width: 90%;
    text-align: center;
    border:none;
    border-bottom: 1px solid white;
    outline: none;
    height: 30px;
    padding: 8px;
    border-radius: 8px;
    color: white;
    background-color: transparent;
    margin-bottom: 5%;
}
.address::placeholder{
    color: white;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
}
.query {
    margin: 7% 0% 3% 0%;
    height: 35px;
    width: 40%;
    border-radius: 8px;
    /* border: 1px solid white; */
    background-color: transparent;
    color: white;
    outline: none;
    border: none;
    background-color: rgba(255, 255, 255, 0.2);
    z-index: 999;
}
.query:hover,.query:focus{
    cursor: pointer;
    background-color: rgba(255, 255, 255, 0.5);
    transition: 0.3s ease-in all;
}
.logo {
    height: 7.5vh;
}
.moon {
    background-image: url('img/light-bg.png');
    position: absolute;
    top: 55%;
    height: 45%;
    width: 100%;
    opacity: 0.5;
    background-position: bottom;
    background-repeat: no-repeat;
    background-size: contain;
    margin:0;
    padding: 0;
    overflow: hidden;
    z-index: 0;
    pointer-events: none;
    /* animation: revolve 60s infinite ease-in-out; */
}
/* Error alert starts */
.error {
    position: absolute;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    width: 320px;
    bottom: 3%;
    right: 2%;
    padding: 12px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: start;
    border-radius: 50px;
    background: -webkit-linear-gradient(to right, #f45c43, #eb3349);
    background: linear-gradient(to right, #f45c43, #eb3349);
    box-shadow: 0 0px 10px #de1c3280;
  }
  
  .error__icon {
    width: 20px;
    height: 20px;
    transform: translateY(-2px);
    margin-right: 8px;
    filter: drop-shadow(2px 1px 2px rgb(0 0 0 / 0.4));
  }
  
  .error__icon path {
    fill: #fff;
  }
  
  .error_msg {
    font-weight: 500;
    font-size: 14px;
    color: #fff;
  }
  
  .error_close {
    cursor: pointer;
    width: 20px;
    height: 20px;
    cursor: pointer;
    margin-left: auto;
    filter: drop-shadow(2px 1px 2px rgb(0 0 0 / 0.4));
  }
  
  .error_close path {
    fill: #fff;
  }
/* Error alert ends */

/* Caution alert starts */

.warning {
    position: absolute;
    bottom: 3%;
    right: 2%;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    width: 320px;
    padding: 12px;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: start;
    background: #FEF7D1;
    border: 1px solid #F7C752;
    /* border-radius: 8px; */
    border-radius: 50px;
    box-shadow: 0px 0px 5px -3px #111;
  }
  
  .warning__icon {
    width: 20px;
    height: 20px;
    transform: translateY(-2px);
    margin-right: 8px;
  }
  
  .warning__icon path {
    fill: #F7C752;
  }
  
  .warning_msg {
    font-weight: 500;
    font-size: 14px;
    color: #755118;
  }
  
  .warning_close {
    cursor: pointer;
    width: 20px;
    height: 20px;
    cursor: pointer;
    margin-left: auto;
    filter: drop-shadow(2px 1px 2px rgb(0 0 0 / 0.4));
  }
  
  .warning_close path {
    fill: #755118;
  }

/* Caution alert ends */

/* Success alert starts */

.success {
  position: absolute;
  bottom: 3%;
  right: 2%;
  font-family: system-ui, -apple-system;
  width: 320px;
  padding: 12px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: start;
  background: #EDFBD8;
  /* border-radius: 8px; */
  border-radius: 50px;
  border: 1px solid #84D65A;
  box-shadow: 0px 0px 5px -3px #111;
}

.success__icon {
  width: 20px;
  height: 20px;
  transform: translateY(-2px);
  margin-right: 8px;
}

.success__icon path {
  fill: #84D65A;
}

.success__title {
  font-weight: 500;
  font-size: 14px;
  color: #2B641E;
}

.success_close {
    cursor: pointer;
    width: 20px;
    height: 20px;
    cursor: pointer;
    margin-left: auto;
}

.success_close path {
  fill: #2B641E;
}

/* Success alert ends */
/* NFT Section Starts*/
.eligible {
    border: 1px solid white;
    backdrop-filter: blur(10px);
    z-index: 999;
    height: 100%;
    box-shadow: 0px 0px 30px 10px rgba(255, 255, 255, 0.1);
    border-radius: 15px;
    overflow: hidden;
    width: 12em;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: start;
    color: #fdb248;
    font-weight: 600;
    font-size: 1.2em;
    font-family: 'Trebuchet MS';
    text-align: center;
    place-self: flex-start;
    transition: 0.4s ease all;
}
.eligible:hover{
    box-shadow: 0px 0px 30px 20px rgba(255, 0, 0, 0.15);
}
.nft-container {
    height: 80%;
    width: 100%;
    margin-bottom: 7%;
}
.nft-img {
    height: 100%;
    width: 100%;
    border-radius: 5%;
    margin-bottom: 10%;
}
/* NFT Section Ends */
.claim-nft {
    height: 35px;
    width: 60%;
    border-radius: 8px;
    /* border: 1px solid white; */
    background-color: transparent;
    color: white;
    outline: none;
    border: none;
    background-color: rgba(255, 255, 255, 0.2);
    z-index: 999;
}
.claim-nft:hover{
    cursor: pointer;
    background-color: rgba(255, 255, 255, 0.5);
    transition: 0.3s ease-in all;
}

@keyframes load {
    0% {
        transform: rotate(0deg);
    }
    100%{
        transform: rotate(360deg);
    }
}
@keyframes fade {
    100%{
        opacity: 0;

    }
}
@keyframes revolve {
    0%{
        transform: rotate(0deg);
        transform-origin: bottom;
    }
    100%{
        transform: rotate(360deg);
    }
}
@media screen and (max-width:600px) {
    .tool {
        transition: 0.1s ease-in-out all;
        width: 60vw;
        text-align: center;
        font-size: 0.75em;
    }
    .address {
        font-size: 1em;
        height: 20px;
    }
    .address::placeholder{
       font-size: 1.2em;
    }
    .main {
      display: flex;
      flex-direction: column;
      /* grid-template-rows:2fr 1fr; */
      align-items: center;
      justify-content: center;
    }
    .success, .warning, .error {
      bottom: 4%;
      left: 50%;
      transform: translate(-50%, 0);
    }
}
/* @media screen and (max-width:600px) {
  .main {
    grid-template-columns:1fr;
    grid-template-rows:2fr 1fr;
    place-items: center;
    justify-content: center;
  }
  .tool {
    place-self: center;
    justify-self: start;
  }
} */

